clusters/aks-dev/workloads/services/efk-stack/elasticsearch/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring-efk
  #labels:
    #istio-injection: enabled
